@startuml

class UploadRequirementsController {
    + getApplications(): Iterable<jobApplication>
    + uploadTextFile(application: jobApplication, path: String)
    + passGrammar(path: String): boolean

}

class UploadRequirementsUI {
    - controller: UploadRequirementsController
    + doShow(): boolean
    + headline(): String

}

class ApplicationService {
    + findAll(): Iterable
    + uploadRequirementsResponses(application: jobApplication, responses: String)
}

class jobApplication

UploadRequirementsUI --> UploadRequirementsController
UploadRequirementsController --> ApplicationService
UploadRequirementsController --> jobApplication

@enduml
